--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,16 @@
   align-items: center;
 }
 
+#tooltip {
+  margin: 0;
+  padding: 5px;
+  background-color: rgb(255, 227, 227);
+  border: 1px solid #374649;
+  border-radius: 2px;
+  text-align: left;
+  max-width: 175px;
+}
+
 .logo {
   width: 20px;
   padding-left: 10px;
