--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,13 @@
   justify-content: center;
 }
 
+#viz-controls p {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #c7c7c7;
+}
+
 #tooltip {
   margin: 0;
   padding: 5px;
@@ -81,7 +88,7 @@
   padding-left: 10px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   #rotate-device {
     margin: 0;
     height: 90vh;
@@ -102,7 +109,7 @@
   }
 }
 
-@media (min-width: 501px) {
+@media (min-width: 601px) {
   #rotate-device {
     display: none;
   }
