--- a/src/App.css
+++ b/src/App.css
@@ -58,19 +58,18 @@
   pointer-events: none;
 }
 
+#data-viz {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #viz-controls {
   margin: 0 auto;
   width: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-#viz-controls p {
-  background-color: white;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #c7c7c7;
 }
 
 #tooltip {
