--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@ h1 {
   margin-bottom: 5px;
 }
 
+table {
+  font-size: calc(8px + 1vmin);
+}
+
 .App {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.027);
