--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,9 @@ table {
 }
 
 #viz-header {
-  position: sticky;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #viz-controls {
