--- a/src/App.css
+++ b/src/App.css
@@ -99,8 +99,8 @@ table {
   margin: 0 auto;
   width: 80%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  place-items: center;
 }
 
 @media (max-width: 500px) {
@@ -132,5 +132,11 @@ table {
 @media (min-width: 501px) {
   #rotate-device {
     display: none;
+  }
+}
+
+@media (min-width: 900px) {
+  #viz-controls {
+    flex-direction: row;
   }
 }
